--- a/hellofs.fsproj
+++ b/hellofs.fsproj
@@ -10,7 +10,6 @@
 
   <ItemGroup>
     <Compile Include="Program.fs" />
-    <Compile Include="**\*.cs" Exclude="bin\**;obj\**;**\*.xproj;packages\**" />
     <EmbeddedResource Include="**\*.resx" />
     <EmbeddedResource Include="compiler\resources\**\*" />
   </ItemGroup>
@@ -20,6 +19,13 @@
       <Version>1.0.0-alpha-20161104-2</Version>
       <PrivateAssets>All</PrivateAssets>
     </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+      <PackageReference Include="FSharp.NET.Sdk">
+      <Version>1.0.0-alpha-*</Version>
+      <PrivateAssets>All</PrivateAssets>
+      </PackageReference>
   </ItemGroup>
 
   <ItemGroup Condition=" '$(TargetFramework)' == 'netcoreapp1.0' ">
@@ -41,5 +47,5 @@
     <DefineConstants>$(DefineConstants);RELEASE</DefineConstants>
   </PropertyGroup>
   
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(MSBuildToolsPath)\Microsoft.Common.targets" />
 </Project>
